--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://js.stripe.com/v2" async></script>
 </head>
 
 <body>
